# SecondMilestone

./: Astar.h  BestFirstSearch.h  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  CommonSearcher.h  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  GeneralServer.cpp  GeneralServer.h  Matrices.h  MatricesCollectionTest.h  MatricesProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MySolver.h  PriorityQueue.h  Searchable.h  Searcher.h  ServerSide.h  Server_side.h  Solution.h  Solver.h  State.h  graphs.txt  main.cpp  solution.txt
